--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "start": "fastify start index",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint . --ext .js,.ts",
     "lint:fix": "eslint --fix . --ext .js,.ts",
     "prettier": "prettier --check \"/*.js\"",
-    "prettier:fix": "prettier --write \"/*.js\""
+    "prettier:fix": "prettier --write \"/*.js\"",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "repository": {
     "type": "git",
@@ -25,6 +28,7 @@
   "homepage": "https://github.com/Book-Searcher/Book-Searcher#readme",
   "dependencies": {
     "fastify": "^3.13.0",
+    "jest": "^26.6.3",
     "typescript": "^4.2.2"
   },
   "devDependencies": {
