--- a/package.json
+++ b/package.json
@@ -5,18 +5,11 @@
   "scripts": {
     "dev": "sapper dev",
     "build": "sapper build --legacy",
-    "export": "sapper export --legacy",
     "start": "node __sapper__/build",
     "format": "prettier --write ./**/*.{js,svelte,md,html,css,json}",
-    "prelint": "npm run format",
     "lint": "eslint src/index.js",
     "lint:fix": "eslint --fix src/index.js",
-    "pretest": "npm run lint"
-  },
-  "dependencies": {
-    "compression": "^1.7.1",
-    "polka": "next",
-    "sirv": "^1.0.0"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -29,6 +22,11 @@
     "url": "https://github.com/Book-Searcher/Book-Searcher/issues"
   },
   "homepage": "https://github.com/Book-Searcher/Book-Searcher#readme",
+  "dependencies": {
+    "compression": "^1.7.1",
+    "polka": "next",
+    "sirv": "^1.0.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
@@ -48,6 +46,8 @@
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-standard": "^5.0.0",
     "eslint-plugin-svelte3": "^3.1.2",
+    "husky": "^4.3.8",
+    "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
     "rollup": "^2.3.4",
@@ -55,5 +55,18 @@
     "rollup-plugin-terser": "^7.0.0",
     "sapper": "^0.28.0",
     "svelte": "^3.17.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "npm run test"
+    }
+  },
+  "lint-staged": {
+    "**/*.{ts,js}": [
+      "npm run lint",
+      "npm run format",
+      "git add"
+    ]
   }
 }
