--- a/static/manifest.json
+++ b/static/manifest.json
@@ -5,11 +5,5 @@
   "short_name": "TODO",
   "display": "minimal-ui",
   "start_url": "/",
-  "icons": [
-    {
-      "src": "fileicon.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+  "icons": []
 }
