--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@rollup/plugin-image": "^2.0.6",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.1",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "polka": "next",
