--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "polka": "next",
-    "sirv": "^1.0.0"
+    "sirv": "^1.0.0",
+    "vercel-sapper": "^0.44.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
