--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "sapper dev",
-    "build": "sapper build --legacy",
+    "vercel": "sapper build --legacy && vercel",
+    "now": "sapper build --legacy && now",
+    "b": "sapper build --legacy",
     "start": "node __sapper__/build",
     "export": "sapper export",
     "prettier": " prettier --check ./**/*.{js,svelte,html,css,json}",
@@ -27,13 +29,21 @@
   "dependencies": {
     "@rollup/plugin-alias": "^3.1.2",
     "@rollup/plugin-image": "^2.0.6",
+    "babel-node": "0.0.1-security",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "compression": "^1.7.1",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.9",
+    "ncp": "^2.0.0",
+    "node-fetch": "^2.6.1",
+    "now-sapper": "^0.39.2",
     "polka": "next",
+    "rollup-plugin-json": "^4.0.0",
     "sirv": "^1.0.0",
+    "validator": "^13.6.0",
     "vercel-sapper": "^0.44.0"
   },
   "devDependencies": {
@@ -50,7 +60,6 @@
     "@rollup/plugin-url": "^5.0.0",
     "@testing-library/svelte": "^3.0.3",
     "babel-jest": "^26.6.3",
-    "body-parser": "^1.19.0",
     "eslint": "^7.21.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.1.0",
@@ -66,8 +75,6 @@
     "husky": "^4.3.8",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
-    "mongoose": "^5.12.3",
-    "node-fetch": "^2.6.1",
     "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
     "rollup": "^2.3.4",
@@ -76,8 +83,7 @@
     "sapper": "^0.28.0",
     "session-file-store": "^1.5.0",
     "svelte": "^3.17.3",
-    "svelte-jester": "^1.3.0",
-    "validator": "^13.5.2"
+    "svelte-jester": "^1.3.0"
   },
   "husky": {
     "hooks": {
