--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
   "builds": [
     {
       "src": "package.json",
-      "use": "vercel-sapper"
+      "use": "vercel-sapper",
+      "config": {
+        "build": false
+      }
     }
   ]
 }
