--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "export": "sapper export",
     "prettier": " prettier --check ./**/*.{js,svelte,html,css,json}",
     "prettier:fix": "prettier --write ./**/*.{js,svelte,html,css,json}",
-    "lint": "eslint ./**/*.{js,svelte}",
-    "lint:fix": "eslint --fix ./**/*.{js,svelte}",
+    "lint": "eslint --ignore-path .gitignore ./**/*.{js,svelte}",
+    "lint:fix": "npm run lint -- --fix",
     "test": "jest"
   },
   "repository": {
@@ -39,7 +39,6 @@
     "mongoose": "^5.12.9",
     "ncp": "^2.0.0",
     "node-fetch": "^2.6.1",
-    "now-sapper": "^0.39.2",
     "polka": "next",
     "rollup-plugin-json": "^4.0.0",
     "sirv": "^1.0.0",
@@ -71,7 +70,6 @@
     "eslint-plugin-sonarjs": "^0.6.0",
     "eslint-plugin-standard": "^5.0.0",
     "eslint-plugin-svelte3": "^3.1.2",
-    "express-session": "^1.17.1",
     "husky": "^4.3.8",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
@@ -81,7 +79,6 @@
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "sapper": "^0.28.0",
-    "session-file-store": "^1.5.0",
     "svelte": "^3.17.3",
     "svelte-jester": "^1.3.0"
   },
