--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "export": "sapper export",
     "prettier": " prettier --check ./**/*.{js,svelte,html,css,json}",
     "prettier:fix": "prettier --write ./**/*.{js,svelte,html,css,json}",
-    "lint": "eslint --ignore-path .gitignore ./**/*.{js,svelte}",
+    "lint": "svelte-check --output=human && eslint --ignore-path .gitignore ./**/*.{js,svelte}",
     "lint:fix": "npm run lint -- --fix",
     "test": "jest"
   },
@@ -80,6 +80,7 @@
     "rollup-plugin-terser": "^7.0.0",
     "sapper": "^0.28.0",
     "svelte": "^3.17.3",
+    "svelte-check": "^1.5.4",
     "svelte-jester": "^1.3.0"
   },
   "husky": {
