--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "export": "sapper export",
     "prettier": " prettier --check ./**/*.{js,svelte,html,css,json}",
     "prettier:fix": "prettier --write ./**/*.{js,svelte,html,css,json}",
-    "lint": "svelte-check --output=human && eslint --ignore-path .gitignore ./**/*.{js,svelte}",
+    "lint": "svelte-check --output=human && eslint --ignore-path .gitignore ./src/**/*.{js,svelte}",
     "lint:fix": "npm run lint -- --fix",
     "test": "jest"
   },
