--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@rollup/plugin-alias": "^3.1.2",
     "@rollup/plugin-image": "^2.0.6",
+    "babel-eslint": "^10.1.0",
     "babel-node": "0.0.1-security",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -37,7 +38,6 @@
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.9",
-    "ncp": "^2.0.0",
     "node-fetch": "^2.6.1",
     "polka": "next",
     "rollup-plugin-json": "^4.0.0",
