--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,6 +14,8 @@ jobs:
 
       - name: 'ci'
         run: npm ci
+      - name: 'build'
+        run: npm run build
       - name: 'prettier'
         run: npm run prettier
       - name: 'lint'
