--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prettier:fix": "prettier --write ./**/*.{js,svelte,html,css,json}",
     "lint": "svelte-check --output=human && eslint --ignore-path .gitignore ./src/**/*.{js,svelte}",
     "lint:fix": "npm run lint -- --fix",
-    "test": "jest"
+    "test": "npm run build && jest"
   },
   "repository": {
     "type": "git",
